<resources>
    <string name="app_name">67th Milestone</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_beat_the_street2">Beat The Street</string>
    <string name="title_activity_ad_mad">Ad Mad</string>
    <string name="title_activity_market_madness">Market Madness</string>
    <string name="title_activity_virtual_stock_market">Virtual Stock Market</string>
    <string name="title_activity_zombie_hunt">Zombie Hunt</string>
    <string name="title_activity_write_it_up">Write It Up</string>
    <string name="title_activity_theatre_phantamonica">Theatre Phantamonica</string>
    <string name="title_activity_the_xposure">The Xposure</string>
    <string name="title_activity_qriosity">Qriosity</string>
    <string name="title_activity_perspective">Perspective</string>
    <string name="title_activity_night_treasure_hunt">Night Treasure Hunt</string>
    <string name="title_activity_battle_of_bands">Battle Of Bands</string>
    <string name="title_activity_bmupitchers">BMU Pitchers</string>
    <string name="title_activity_fashion_crave">Fashion Crave</string>
    <string name="title_activity_hackathon">Hackathon</string>
    <string name="title_activity_aerial_drones">Aerial Drones</string>
    <string name="title_activity_black_box">Black Box</string>
    <string name="title_activity_event_horizon">Event Horizon</string>
    <string name="title_activity_gaming_arena">Gaming Arena</string>
    <string name="title_activity_line_follower">Line Follower</string>
    <string name="title_activity_live_tic_tac_toe">Live Tic Tac Toe</string>
    <string name="title_activity_matlab_quest">Matlab Quest</string>
    <string name="title_activity_mecha_thing">MechaThing</string>
    <string name="title_activity_nerd_paradise">Nerd Paradise</string>
    <string name="title_activity_robotus_kreig">Robotus Kreig</string>
    <string name="title_activity_bmumasterchef">BMU Masterchef</string>
    <string name="title_activity_grappling">Grappling</string>
    <string name="title_activity_my_milestone_movie">My Milestone Movie</string>
    <string name="title_activity_nayavada">Nayavada</string>
    <string name="title_activity_nitro_surge">Nitro Surge</string>
    <string name="title_activity_womens_got_talent">Women\'s Got Talent</string>
    <string name="app_intro_skip">Skip</string>
    <string name="action_settings">Settings</string>
    <string name="about_the_fest">67th Milestone is a multi-faceted event that will host a broad spectrum of activities, striking mix of conventional and unconventional competitions and shows with something to offer to every individual. During its span of four days, it will offer a platform for artists to perform, techies to scratch their head, speed enthusiasts to get behind the wheel and fashion freaks to walk the ramp</string>
    <string name="aboutus1">Founded by The Hero Group, BML Munjal University (BMU) is a not-for-profit initiative offering undergraduate and post-graduate courses in management (MBA and BBA) and undergraduate courses in engineering (BTech) and commerce (BCom (Hons)). The University has been founded with the objective of transforming higher education in India by creating a world-class teaching and learning environment. The 50-acre, fully residential and co-educational university has been notified under the Haryana State Private Universities Act, 2006.</string>
    <string name="aboutus2">Named after the chairman and founder of the Hero Group, Brijmohan Lall Munjal, BMU is engaged in creating, preserving and imparting internationally benchmarked knowledge and skills to a diverse community of students from across the world. The Hero Group is a US$ 5 billion group which includes Hero MotoCorp – the world’s largest two-wheeler manufacturer.</string>
    <string name="aboutus3">BMU is mentored by Imperial College London, the 108-year old University that is currently ranked 9th in the QS World University rankings (2016-2017).</string>
    <string name="aboutus4">The campus is located at the 67th KM stone on NH-8, District Gurgaon, Haryana, about 50 km from New Delhi International Airport.</string>
    <string name="aerialdronesdesc">Having ideas is far different from applying those practically and proving oneself. 67th milestone Aerial Drone Show gives you a wonderful opportunity to showcase your talent. The program not only aims at drone technology, but the main aim is to encourage teams coming up with basic drones who need a push for further development. All the teams need to get registered themselves and carry their own multi-rotors (tri, quad, hexa and octa-copter)</string>
    <string name="battleofbandsdesc">“Battle Of The Bands” gives you a chance to make the crowd dance to your beats and waive to your chorus. Let the guitarist strum and the drummer beat out while the vocalist gets into the groove with the crowd. With various bands performing to make a mark, let’s see who can make the evening an unforgettable one</string>
    <string name="beatthedesc">Express yourself through the language of dance and reflect your soul without words. Here is the platform to showcase your talent and outstand other teams with your impressive co-ordination and mind-blowing steps. Do the hip-hop or lock and pop and set the stage ablaze with your charisma.</string>
    <string name="blackboxdesc">Game is purely based on the concept of digital logics. Participants have to design the circuits in order to get required output. There will be preliminary rounds followed by finale with different difficulty levels.</string>
    <string name="masterchefdesc">BMU brings to you a unique Master Chef contest which will not only put to test your cooking skills with fire but also flameless cooking. The competition will run for three rounds with each round comprising of an elimination round. BMU Master Chef will provide the perfect platform for anyone who wants to try their hands at cooking. But mind you! The rounds are not only limited to cooking – It is open to non-culinarians too. Come and unleash your culinary potential at BMU Master Chef.</string>
    <string name="bmupitchersdesc">They say, an idea can change your life. But why just let it change your own life? Why not make an impact on other’s lives too. BMU Pitchers offers the perfect platform for all young entrepreneurs to make their dreams come true.</string>
    <string name="eventhordesc">The event is about checking and challenging the scientific skills of its participants and since we are going for a planetarium like atmosphere the event would aim at making the feeling of being involved in a space and science event real and also include the fun of science by showing occasional videos and then asking questions based on what has been shown.The questions would force the participants to think deep and also think quick on their behalf as the questions will be a mixture of tough and easy yet challenging questions.</string>
    <string name="fashiondesc">The Fashion Crave provides you with the chance to impress the audience with your style and confidence. Bring on the best dress and let your performance define the theme for its time to live your runaway dream.\nCompetition is open for both boys and girls.</string>
    <string name="gamingdesc">A gaming event by gamers for gamers. Form teams to compete against each other and showcase your skills in front of other players. Games include DOTA 2 and Counter Strike: Global Offensive.May the best teams win!</string>
    <string name="grapplingdesc">Grappling is a hybrid sport of many traditional martial arts including wrestling, judo ,jiu-jitsu and sambo. Our first ever university fest shall be providing a rare opportunity to showcase your talent and test your skills against great fighters from all over India. It has two weight categories over and under 70 kg</string>
    <string name="hackdesc">Someone once said, if you give a toy to a hacker, the first thing he\'ll do is to take it apart. If you are one of them who think this way, Hackathon is the perfect event for you at 67th Milestone. This is a 48 hour event where you need to build a prototype of a product within 48 hours, involving any software and hardware requirements there may be. You may make a fully software based product or a fully hardware hased product or mix them up to your choice. More details will be available soon prior to the event.</string>
    <string name="linedesc">The Line follower robot is a mobile machine that can detect and follow the line drawn on the floor. Generally, the path is predefined and can be visible like a black line on a white surface with a high contrasted colour. Participants should have to complete the paths as per rules and regulations. The judgement criteria will be on the basis of time.</string>
    <string name="ticdesc">9 circular rings will be placed on the ground (preferably open space), representing 9 blocks of tic tac-toe. The game will start with both the teams running towards a ring from the starting point and placing their tag (Coloured Cloth) in separate rings. They have to return back to the starting point to pass to the next person in the team to run. The final round will have hurdles to make it more challenging. Each team will be given 3 tags (cloth piece) of same colour. They have to manipulate the clothes to create the pattern to win the tic tac toe game.</string>
    <string name="marketdesc">Utilise your marketing skills to create demand for your product and earn revenue, with Market Madness.Participation can be either in teams or as individuals .Each participant is recyclable products, out of which they have to create a completely new products. These products will then be made available for purchase online.The team’s aim is to market their product in a way that would fetch them maximum profits.Points will be awarded to teams on the basis of marketing strategy, amount of money earned and also on the creativity of the product.</string>
    <string name="matdesc">A qualification Round in which simple MCQ question will be asked on the basics of Matlab. Second round will be subjective questions and marks will be assigned on the basis of completion time of the working code. Finale will be a quizzing round with rapid fire and buzzer round.</string>
    <string name="mytalkdesc1">Being ‘good’ in today’s world doesn’t guarantee success. It isn’t enough. It is the downright crazy and bizarre ideas that makes you different from the others and an entrepreneur is just the right person to follow his idea for he has the drive to be an initiator, a challenger and definitely the person to make the “crazy ideas” into reality. MyTalk is to inculcate a culture of entrepreneurship at the university by inviting successful entrepreneurs from various fields who share their journeys, their struggles, their awe inspiring success stories as well as the essence of the entrepreneurship in today’s world.</string>
    <string name="kkdesc">Kunal Kapoor is an Indian actor who appears in Hindi cinema. Apart from his career in acting, he is an entrepreneur working as the Co-Founder of Ketto, his crowdfunding startup. He has appeared in films likeRang de basanti, Bachna ae Haseeno, Don 2, Dear Zindagi and many more. Ketto is Asia\'s most-visited crowdfunding platform with the largest funding community.</string>
    <string name="nilayarjundesc">Co-founder at Alaavo Ventures ,Economic Times Young Leader 2014.Experience in corporate financial training, start-up consulting, building cross-asset market risk management platforms, managing analytics and risk reporting teams and client relationship management across Asia, Europe and US. His interests lie in the field of technology, education, finance, endurance sports and building communities.</string>
</resources>