<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:background="@drawable/bmupic"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Overview"
        android:textColor="#000000"
        android:paddingTop="15dp"
        android:paddingLeft="15dp"
        android:textSize="30dp"
        />

    <com.bluejamesbond.text.DocumentView xmlns:ext="http://schemas.android.com/apk/res-auto"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        ext:documentView_antialias="true"
        ext:documentView_cacheConfig="auto_quality"
        ext:documentView_hyphen="-"
        ext:documentView_lineHeightMultiplier="1.5"
        ext:documentView_maxLines="100"
        ext:documentView_insetPadding="10dp"
        ext:documentView_insetPaddingBottom="10dp"
        ext:documentView_insetPaddingLeft="10dp"
        ext:documentView_insetPaddingRight="10dp"
        ext:documentView_insetPaddingTop="10dp"
        ext:documentView_reverse="false"
        ext:documentView_text="@string/aboutus1"
        ext:documentView_textAlignment="justified"
        ext:documentView_textColor="@android:color/darker_gray"
        ext:documentView_textFormat="plain"
        ext:documentView_textSize="17dp"
        ext:documentView_textSubPixel="true"/>

    <com.bluejamesbond.text.DocumentView xmlns:ext="http://schemas.android.com/apk/res-auto"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        ext:documentView_antialias="true"
        ext:documentView_cacheConfig="auto_quality"
        ext:documentView_hyphen="-"
        ext:documentView_lineHeightMultiplier="1.5"
        ext:documentView_maxLines="100"
        ext:documentView_insetPadding="10dp"
        ext:documentView_insetPaddingBottom="10dp"
        ext:documentView_insetPaddingLeft="10dp"
        ext:documentView_insetPaddingRight="10dp"
        ext:documentView_insetPaddingTop="10dp"
        ext:documentView_reverse="false"
        ext:documentView_text="@string/aboutus2"
        ext:documentView_textAlignment="justified"
        ext:documentView_textColor="@android:color/darker_gray"
        ext:documentView_textFormat="plain"
        ext:documentView_textSize="17dp"
        ext:documentView_textSubPixel="true"/>

    <com.bluejamesbond.text.DocumentView xmlns:ext="http://schemas.android.com/apk/res-auto"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        ext:documentView_antialias="true"
        ext:documentView_cacheConfig="auto_quality"
        ext:documentView_hyphen="-"
        ext:documentView_lineHeightMultiplier="1.5"
        ext:documentView_maxLines="100"
        ext:documentView_insetPadding="10dp"
        ext:documentView_insetPaddingBottom="10dp"
        ext:documentView_insetPaddingLeft="10dp"
        ext:documentView_insetPaddingRight="10dp"
        ext:documentView_insetPaddingTop="10dp"
        ext:documentView_reverse="false"
        ext:documentView_text="@string/aboutus3"
        ext:documentView_textAlignment="justified"
        ext:documentView_textColor="@android:color/darker_gray"
        ext:documentView_textFormat="plain"
        ext:documentView_textSize="17dp"
        ext:documentView_textSubPixel="true"/>

    <com.bluejamesbond.text.DocumentView xmlns:ext="http://schemas.android.com/apk/res-auto"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        ext:documentView_antialias="true"
        ext:documentView_cacheConfig="auto_quality"
        ext:documentView_hyphen="-"
        ext:documentView_lineHeightMultiplier="1.5"
        ext:documentView_maxLines="100"
        ext:documentView_insetPadding="10dp"
        ext:documentView_insetPaddingBottom="10dp"
        ext:documentView_insetPaddingLeft="10dp"
        ext:documentView_insetPaddingRight="10dp"
        ext:documentView_insetPaddingTop="10dp"
        ext:documentView_reverse="false"
        ext:documentView_text="@string/aboutus4"
        ext:documentView_textAlignment="justified"
        ext:documentView_textColor="@android:color/darker_gray"
        ext:documentView_textFormat="plain"
        ext:documentView_textSize="17dp"
        ext:documentView_textSubPixel="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Founders"
        android:textColor="#000000"
        android:paddingTop="15dp"
        android:paddingLeft="15dp"
        android:textSize="30dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view3"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_height="160dp"
            card_view:cardBackgroundColor="#ffffff"
            card_view:contentPadding="5dp"
            card_view:cardCornerRadius="15dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:src="@drawable/bml10"
                    app:civ_border_color="@android:color/white"
                    app:civ_border_width="2dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:gravity="center"
                    android:letterSpacing="0.05"
                    android:text="Brijmohan Lall Munjal"
                    android:textColor="@android:color/black"
                    android:textSize="17sp"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view4"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_height="160dp"
            card_view:cardBackgroundColor="#ffffff"
            card_view:cardCornerRadius="15dp"
            card_view:contentPadding="5dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:src="@drawable/sukm"
                    app:civ_border_color="@android:color/white"
                    app:civ_border_width="2dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:gravity="center"
                    android:letterSpacing="0.05"
                    android:text="Suman Kant Munjal"
                    android:textColor="@android:color/black"
                    android:textSize="17sp"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view2"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_height="160dp"
            card_view:cardBackgroundColor="#ffffff"
            card_view:contentPadding="5dp"
            card_view:cardCornerRadius="15dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:src="@drawable/skm"
                    app:civ_border_color="@android:color/white"
                    app:civ_border_width="2dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:gravity="center"
                    android:letterSpacing="0.05"
                    android:text="Sunil Kant    Munjal"
                    android:textColor="@android:color/black"
                    android:textSize="17sp"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view1"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_height="160dp"

            card_view:cardBackgroundColor="#ffffff"
            card_view:cardCornerRadius="15dp"
            card_view:contentPadding="5dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:src="@drawable/pkm"
                    app:civ_border_color="@android:color/white"
                    app:civ_border_width="2dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:gravity="center"
                    android:letterSpacing="0.05"
                    android:text="Pawan Kant Munjal"
                    android:textColor="@android:color/black"
                    android:textSize="17sp"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>


</LinearLayout>
</ScrollView>