<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ghigway">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/mytalk4"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="190dp"
            android:textColor="@android:color/white"
            android:text="MY TALK"/>
    </RelativeLayout>
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/contact_card0"

        android:layout_marginLeft="@dimen/card_margin"
        android:layout_marginRight="@dimen/card_margin"
        android:layout_marginTop="@dimen/card_margin"
        card_view:cardBackgroundColor="#aa000000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:clickable="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:text="DESCRIPTION"/>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/contact_card1"

        android:layout_marginLeft="@dimen/card_margin"
        android:layout_marginRight="@dimen/card_margin"
        android:layout_marginTop="@dimen/card_margin"
        card_view:cardBackgroundColor="#88000000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:clickable="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:padding="@dimen/card_margin"
            android:background="#88000000"
            android:orientation="vertical"
            android:layout_height="wrap_content">

        <com.bluejamesbond.text.DocumentView xmlns:ext="http://schemas.android.com/apk/res-auto"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            ext:documentView_antialias="true"
            ext:documentView_cacheConfig="auto_quality"
            ext:documentView_hyphen="-"
            ext:documentView_lineHeightMultiplier="1.5"
            ext:documentView_maxLines="100"
            ext:documentView_insetPadding="10dp"
            ext:documentView_insetPaddingBottom="10dp"
            ext:documentView_insetPaddingLeft="10dp"
            ext:documentView_insetPaddingRight="10dp"
            ext:documentView_insetPaddingTop="10dp"
            ext:documentView_reverse="false"
            ext:documentView_text="@string/mytalkdesc1"
            ext:documentView_textAlignment="justified"
            ext:documentView_textColor="@android:color/darker_gray"
            ext:documentView_textFormat="plain"
            ext:documentView_textSize="17dp"
            ext:documentView_textSubPixel="true"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/contact_card14"

        android:layout_marginLeft="@dimen/card_margin"
        android:layout_marginRight="@dimen/card_margin"
        android:layout_marginTop="@dimen/card_margin"
        card_view:cardBackgroundColor="#aa000000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:clickable="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:text="SPEAKER"/>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/contact_card7"
        android:layout_marginLeft="@dimen/card_margin"
        android:layout_marginRight="@dimen/card_margin"
        android:layout_marginTop="@dimen/card_margin"
        card_view:cardBackgroundColor="#88000000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:clickable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:padding="@dimen/card_margin"
            android:orientation="vertical"
            android:background="#88000000"

            android:layout_height="wrap_content">
            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/kunal"
                app:civ_border_color="@android:color/white"
                app:civ_border_width="2dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:textAlignment="center"
                android:gravity="center"
                android:letterSpacing="0.05"
                android:textColor="@android:color/white"
                android:text="KUNAL KAPOOR"
                android:textSize="18sp"/>
        <com.bluejamesbond.text.DocumentView xmlns:ext="http://schemas.android.com/apk/res-auto"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            ext:documentView_antialias="true"
            ext:documentView_cacheConfig="auto_quality"
            ext:documentView_hyphen="-"
            ext:documentView_lineHeightMultiplier="1.5"
            ext:documentView_maxLines="100"
            ext:documentView_insetPadding="10dp"
            ext:documentView_insetPaddingBottom="10dp"
            ext:documentView_insetPaddingLeft="10dp"
            ext:documentView_insetPaddingRight="10dp"
            ext:documentView_insetPaddingTop="10dp"
            ext:documentView_reverse="false"
            ext:documentView_text="@string/kkdesc"
            ext:documentView_textAlignment="justified"
            ext:documentView_textColor="@android:color/darker_gray"
            ext:documentView_textFormat="plain"
            ext:documentView_textSize="17dp"
            ext:documentView_textSubPixel="true"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/contact_card2"

        android:layout_marginLeft="@dimen/card_margin"
        android:layout_marginRight="@dimen/card_margin"
        android:layout_marginTop="@dimen/card_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="#88000000"
        android:layout_weight="1"
        android:clickable="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:padding="@dimen/card_margin"
            android:orientation="vertical"
            android:background="#88000000"

            android:layout_height="wrap_content">
            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"

                android:src="@drawable/nilay_arun"
                app:civ_border_color="@android:color/white"
                app:civ_border_width="2dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:gravity="center"
                android:letterSpacing="0.05"
                android:textColor="@android:color/white"
                android:text="NILAY ARUN"
                android:textSize="18sp"/>
        <com.bluejamesbond.text.DocumentView xmlns:ext="http://schemas.android.com/apk/res-auto"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            ext:documentView_antialias="true"
            ext:documentView_cacheConfig="auto_quality"
            ext:documentView_hyphen="-"
            ext:documentView_lineHeightMultiplier="1.5"
            ext:documentView_maxLines="100"
            ext:documentView_insetPadding="10dp"
            ext:documentView_insetPaddingBottom="10dp"
            ext:documentView_insetPaddingLeft="10dp"
            ext:documentView_insetPaddingRight="10dp"
            ext:documentView_insetPaddingTop="10dp"
            ext:documentView_reverse="false"
            ext:documentView_text="@string/nilayarjundesc"
            ext:documentView_textAlignment="justified"
            ext:documentView_textColor="@android:color/darker_gray"
            ext:documentView_textFormat="plain"
            ext:documentView_textSize="17dp"
            ext:documentView_textSubPixel="true"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>
</ScrollView>